--- a/docker_elk_7.10.2/nodejs/src/public/index.html
+++ b/docker_elk_7.10.2/nodejs/src/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    aaab
-    <script src="public/main.js" type="module"></script>
+    <script src="./main.js" type="module"></script>
 </body>
 </html>
