--- a/docker_elk_7.10.2/nodejs/src/public/index.html
+++ b/docker_elk_7.10.2/nodejs/src/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "./build/three.module.js",
+                "OrbitControls": "./jsm/controls/OrbitControls.js"
+            }
+        }
+    </script>
 </head>
 <body>
     <script src="./main.js" type="module"></script>
